# DynaRust

./: .env  .gitignore  .srl  CLAUDE.md  Cargo.toml  Dockerfile  GEMINI.md  LICENSE  README.md  SECURITY.md  cert.sh  encryption.key  encryption.sh  storage.db  stress.sh  test.sh  tests.md
.github/workflows/: rust.yml
cert/: ca.crt  ca.key  ca.srl  client-combined.pem  client.crt  client.csr  client.key  client.p12  server.crt  server.csr  server.key
data/auth/: storage.db
docs/: infra.dot
snapshots/: snapshot_1776457709189.json.enc  snapshot_1776457788151.json.enc  snapshot_1776457823902.json.enc  snapshot_1776458483851.json.enc
src/: logger.rs  main.rs
src/network/: broadcaster.rs  mod.rs
src/security/: authentication.rs
src/storage/: admin.html  admin.rs  engine.rs  mod.rs  persistance.rs  snapshoting.rs  statistics.rs  subscription.rs
src/tokenizer/: engine.rs
