[package]
name = "DynaRust"
version = "1.0.0"
edition = "2024"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.12.15", features = ["json"] }
futures-util = "0.3.31"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
base64 = "0.21"
once_cell = "1.21.3"
futures = "0.3.31"
async-stream = "0.3.6"

[dev-dependencies]
actix-test = { version = "0.1.0-beta.13" }
