[package]
name = "DynaRust"
version = "1.0.0"
edition = "2024"

[dependencies]
actix-web = { version = "4", features = ["openssl"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs"] }
reqwest = { version = "0.12.15", features = ["json"] }
futures-util = "0.3.31"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
base64 = "0.21"
once_cell = "1.21.3"
futures = "0.3.31"
async-stream = "0.3.6"
sha2 = "0.11.0-pre.5"
hex = "0.4.3"
openssl = { version = "0.10", features = ["vendored"] }
chrono = "0.4.40"
jsonwebtoken = "9.3.1"
log = "0.4.27"
rand_core = "0.9.3"
aes-gcm   = "0.10"   # AES-GCM (AEAD) implementation
aead      = "0.5"    # traits for Aead, KeyInit, etc.